SOLVED QUIZ ERROR
Changed Lecture Handlebar
Added missing parameters in score.js

The quiz was not showing when clicked
Undefined column error

--- a/public/css/Layout.css
+++ b/public/css/Layout.css
@@ -142,7 +142,6 @@ article.links{
 /*Footer*/
 
 footer{
-    position: fixed;
     float:left;
     bottom: 0%;
     width: 100%;
